--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">RipCurl</string>
 
     <string name="about_app">О приложении</string>
+    <string name="under_logo_text">Test\nВерсия 1.01</string>
+    <string name="bottom_text">© Test inc.\nAll rights reserved.</string>
 </resources>
